; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_document.c_fz_lookup_metadata.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_document.c_fz_lookup_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fz_lookup_metadata(i32* %0, %struct.TYPE_4__* %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %12 = load i8*, i8** %10, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %5
  %15 = load i32, i32* %11, align 4
  %16 = icmp sgt i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i8*, i8** %10, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 0
  store i8 0, i8* %19, align 1
  br label %20

20:                                               ; preds = %17, %14, %5
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %22 = icmp ne %struct.TYPE_4__* %21, null
  br i1 %22, label %23, label %40

23:                                               ; preds = %20
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = bitcast {}** %25 to i32 (i32*, %struct.TYPE_4__*, i8*, i8*, i32)**
  %27 = load i32 (i32*, %struct.TYPE_4__*, i8*, i8*, i32)*, i32 (i32*, %struct.TYPE_4__*, i8*, i8*, i32)** %26, align 8
  %28 = icmp ne i32 (i32*, %struct.TYPE_4__*, i8*, i8*, i32)* %27, null
  br i1 %28, label %29, label %40

29:                                               ; preds = %23
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = bitcast {}** %31 to i32 (i32*, %struct.TYPE_4__*, i8*, i8*, i32)**
  %33 = load i32 (i32*, %struct.TYPE_4__*, i8*, i8*, i32)*, i32 (i32*, %struct.TYPE_4__*, i8*, i8*, i32)** %32, align 8
  %34 = load i32*, i32** %7, align 8
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = load i8*, i8** %10, align 8
  %38 = load i32, i32* %11, align 4
  %39 = call i32 %33(i32* %34, %struct.TYPE_4__* %35, i8* %36, i8* %37, i32 %38)
  store i32 %39, i32* %6, align 4
  br label %41

40:                                               ; preds = %23, %20
  store i32 -1, i32* %6, align 4
  br label %41

41:                                               ; preds = %40, %29
  %42 = load i32, i32* %6, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
